0.20.2 Fix dark mode's <h3> color in results page

--- a/src/index.scss
+++ b/src/index.scss
@@ -71,6 +71,7 @@ $deck-card-height: 17rem;
     header,
     h2,
     section > div > h3,
+    .results h3,
     .deck > button {
         background-color: var(--event);
         color: white;
